Add comment explaining NativeImageClassLoaderSupportJDK11OrLater#adjustLibrarySupportReadAllUnnamed is only temporary